Bug 1400238 - Notify TabParent when the GTK client offset changes. r=karlt

MozReview-Commit-ID: 1TacAhl6c2M